featÃ: adição dos containers e inicialização de assinatura de partições diversas

--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -95,7 +95,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.baeldung.spring.kafka.KafkaApplication</mainClass>
+                    <image>
+                        <builder>paketobuildpacks/builder-jammy-base:latest</builder>
+                    </image>
                 </configuration>
             </plugin>
         </plugins>
